--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
+		"@arnaud-barre/downwind": "^0.6.2",
 		"@iconify-json/fa6-regular": "^1.1.13",
 		"@iconify-json/fa6-solid": "^1.1.15",
 		"@nabla/vite-plugin-eslint": "^1.5.0",
@@ -63,6 +64,7 @@
 		"eslint-plugin-react-redux": "^4.0.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
 		"eslint-plugin-tailwindcss": "^3.13.0",
+		"lightningcss": "^1.21.8",
 		"postcss": "^8.4.29",
 		"prettier": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.4",
